# sdlarch

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  glad.c  glad.h  sdlarch.c
